# python-project-template

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  test_main.py
.claude/agents/: bd-task-manager.md
.git-hooks/: pre-commit
scripts/: format.sh  lint.sh  setup-hooks.sh  test.sh  typecheck.sh
